# splitwise-mcp

./: README.md  pyproject.toml  render.yaml  server.py  smithery.yaml
.well-known/mcp/: server-card.json
